--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,7 @@ body {
   -webkit-transition: opacity 600ms, visibility 600ms;
   transition: opacity 600ms, visibility 600ms;
 }
+
+.menu-active{
+  border-bottom: 3px solid blue;
+}
