--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,24 @@ body {
   transition: opacity 600ms, visibility 600ms;
 }
 
-.menu-active{
+.menu-active {
   border-bottom: 3px solid blue;
+}
+
+.sudoku-input {
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  font-size: 32px;
+  font-weight: bold;
+}
+
+.default-value {
+  width: 50px;
+  height: 49px;
+  text-align: center;
+  font-size: 32px;
+  font-weight: bold;
+  outline: 2px solid #a9a9a9;
+  display: inline-block;
 }
