--- a/src/index.css
+++ b/src/index.css
@@ -31,12 +31,29 @@ body {
   font-weight: bold;
 }
 
+.sudoku-input:focus {
+  outline: none;
+}
+
 .default-value {
-  width: 50px;
-  height: 49px;
-  text-align: center;
-  font-size: 32px;
-  font-weight: bold;
-  outline: 2px solid #a9a9a9;
-  display: inline-block;
+  border: 1px solid #a9a9a9;
+}
+
+.sudoku-board td {
+  height:30px;
+  width:30px;
+  border:1px solid;
+  text-align:center;
+}
+.sudoku-board td:first-child {
+  border-left:solid;
+}
+.sudoku-board td:nth-child(3n) {
+  border-right:solid ;
+}
+.sudoku-board tr:first-child {
+  border-top:solid;
+}
+.sudoku-board tr:nth-child(3n) td {
+  border-bottom:solid ;
 }
